# DataViz

./: .gitignore  DataViz.cabal  README.md
src/Data/: Viz.hs
src/Data/Viz/: Graph.hs  Quasi.hs
src/Data/Viz/Backend/GraphViz/: Map.hs
src/Data/Viz/Backend/Jit/: ForceDirected.hs
src/Data/Viz/Backend/Jit/ForceDirected/: Example.hs
src/Data/Viz/Examples/: Topologies.hs
